# splice

./: README.md  pyproject.toml
docs/: resolve_api.md  splice.md
scripts/: gen_test_lut.py  probe_nodegraph.py  test_lut_apply.py
scripts/probe/: __main__.py  _fmt.py  app.py  color.py  fairlight.py  fusion.py  items.py  keyframes.py  media_pool.py  mpi.py  pm.py  project.py  timeline.py
src/splice/: __main__.py  cli.py  core.py
src/splice/audio/: passes.py
src/splice/color/: passes.py
src/splice/finish/: passes.py
src/splice/pacing/: hints.py
src/splice/reframe/: layouts.py  tracker.py
src/splice/resolve/: client.py
src/splice/teleprompter/: overlay.py
