[project]
name = "splice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pyloudnorm>=0.1",
]

[project.scripts]
splice = "splice.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splice"]
